Mejora diseño formulario y header

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,21 +9,16 @@
     <link rel="stylesheet" href="~/Formulario.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
+    <header class="hero-header">
+        <div class="container hero-content text-center">
+            <img src="~/images/logo.jpg" class="hero-avatar" />
 
-        <nav class="navbar" style="background-color: #FFD700;">
-            <div style="
-        max-width: 1100px;
-        margin: 0 auto;
-        width: 100%;
-        padding: 10px 20px;
-    ">
-             
-            </div>
-        </nav>
-
-">
-
+            <h1>Fundación Amira Al-Dahab</h1>
+            <p>
+                Apoyamos causas humanas con transparencia, confianza
+                y compromiso real.
+            </p>
+        </div>
     </header>
     <div style="
     max-width: 900px;
